@@ -1,5 +1,12 @@
 2019-10-21  Richard Sandiford  <richard.sandiford@arm.com>
 
+	* tree-vectorizer.h (can_duplicate_and_interleave_p): Take a vec_info.
+	* tree-vect-slp.c (can_duplicate_and_interleave_p): Likewise.
+	(duplicate_and_interleave): Update call accordingly.
+	* tree-vect-loop.c (vectorizable_reduction): Likewise.
+
+2019-10-21  Richard Sandiford  <richard.sandiford@arm.com>
+
 	* tree-vectorizer.h (duplicate_and_interleave): Take a vec_info.
 	* tree-vect-slp.c (duplicate_and_interleave): Likewise.
 	(vect_get_constant_vectors): Update call accordingly.
